--- a/pom.xml
+++ b/pom.xml
@@ -8,10 +8,17 @@
     <version>1.0-SNAPSHOT</version>
     <name>jmeter-dubbo-plugin</name>
 
+    <properties>
+        <java.version>1.8</java.version>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
+    </properties>
+
+
     <repositories>
         <repository>
             <id>aliMaven</id>
-            <name>aliyun maven Public Repository</name>
+            <name>aliyun maven</name>
             <url>http://maven.aliyun.com/nexus/content/groups/public/</url>
         </repository>
     </repositories>
@@ -23,6 +30,16 @@
             <artifactId>ApacheJMeter_java</artifactId>
             <version>3.3</version>
             <scope>provided</scope>
+            <exclusions>
+                <!--<exclusion>
+                    <artifactId>log4j-api</artifactId>
+                    <groupId>org.apache.logging.log4j</groupId>
+                </exclusion>-->
+                <exclusion>
+                    <artifactId>log4j-core</artifactId>
+                    <groupId>org.apache.logging.log4j</groupId>
+                </exclusion>
+            </exclusions>
         </dependency>
         <dependency>
             <groupId>com.alibaba</groupId>
@@ -34,6 +51,20 @@
             <artifactId>lombok</artifactId>
             <version>1.16.16</version>
         </dependency>
+
+
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.8.8</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.2.7</version>
+        </dependency>
+
     </dependencies>
 
 
@@ -61,6 +92,7 @@
                     <encoding>UTF-8</encoding>
                 </configuration>
             </plugin>
+
         </plugins>
     </build>
 
