--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <groupId>com.github</groupId>
     <artifactId>jmeter-dubbo-plugin</artifactId>
     <packaging>jar</packaging>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.1.0</version>
     <name>jmeter-dubbo-plugin</name>
 
     <properties>
@@ -31,10 +31,6 @@
             <version>3.3</version>
             <scope>provided</scope>
             <exclusions>
-                <!--<exclusion>
-                    <artifactId>log4j-api</artifactId>
-                    <groupId>org.apache.logging.log4j</groupId>
-                </exclusion>-->
                 <exclusion>
                     <artifactId>log4j-core</artifactId>
                     <groupId>org.apache.logging.log4j</groupId>
@@ -64,7 +60,6 @@
             <artifactId>fastjson</artifactId>
             <version>1.2.7</version>
         </dependency>
-
     </dependencies>
 
 
